--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,14 @@ spring:
     name: templatex
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/templatex_db
-    username: postgres
-    password: admin
+    url: jdbc:postgresql://localhost:5432/organization
+    username: mukarit
+    password: 1234
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
