--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -29,6 +29,12 @@ spring:
       enabled: true
       max-file-size: 50MB
       max-request-size: 50MB
+
+  jackson:
+    date-format: dd-MM-yyyy
+    time-zone: Asia/Tashkent
+    serialization:
+      write-dates-as-timestamps: false
 
 # File storage configuration
 file:
